--- a/Lesson5/ActivityA/Jenkinsfile
+++ b/Lesson5/ActivityA/Jenkinsfile
@@ -5,19 +5,21 @@ node {
         git "https://github.com/arnoldokoth/ActivityA"
     }
 
-    stage("Install Requirements") {
-        sh 'make install'
-    }
+    dir('Lesson5/ActivityA') {
+        stage("Install Requirements") {
+            sh 'make install'
+        }
 
-    stage("Run Tests") {
-        sh 'make jenkins_test'
-    }
+        stage("Run Tests") {
+            sh 'make jenkins_test'
+        }
 
-    stage("Deploy") {
-        if (env.BRANCH_NAME == "master") {
-            printMessage("deploying master branch")
-        } else {
-            printMessage("no deployment specified for this branch")
+        stage("Deploy") {
+            if (env.BRANCH_NAME == "master") {
+                printMessage("deploying master branch")
+            } else {
+                printMessage("no deployment specified for this branch")
+            }
         }
     }
 
