Remove conditional from Jenkinsfile

--- a/Lesson5/Jenkinsfile
+++ b/Lesson5/Jenkinsfile
@@ -1,3 +1,4 @@
+// Allocate Build Node
 node('master') {
     stage("Fetch Source Code") {
         git 'https://github.com/TrainingByPackt/Beginning-Continuous-Delivery-With-Jenkins'
@@ -8,14 +9,6 @@ node('master') {
 
         stage("Testing") {
             sh 'python test_functions.py'
-        }
-
-        stage("Deployment") {
-            if (env.BRANCH_NAME == 'master') {
-                printMessage('Deploying the master branch')
-            } else {
-                printMessage('No deployment configured for this branch')
-            }
         }
 
         printMessage('Pipeline Complete')
