mv Jenkinsfile to Lesson5 dir

--- a/Lesson5/Jenkinsfile
+++ b/Lesson5/Jenkinsfile
@@ -1,16 +1,21 @@
-// Allocate Build Node
 node('master') {
     stage("Fetch Source Code") {
-        git 'https://github.com/TrainingByPackt/Beginning-Continuous-Delivery-With-Jenkins'
+        git 'https://github.com/TrainingByPackt/Beginning-Jenkins.git'
     }
-
+    
     dir('Lesson5') {
         printMessage('Running Pipeline')
-
         stage("Testing") {
             sh 'python test_functions.py'
         }
-
+        stage("Deployment") {
+            if (env.BRANCH_NAME == 'master') {
+                printMessage('Deploying the master branch')
+            } else {
+                printMessage("No deployment for branch [${env.BRANCH_NAME}]")
+            }
+            
+        }
         printMessage('Pipeline Complete')
     }
 }
